# randomise

./: .dockerignore  DEPLOYMENT.md  Demo_Usage.ipynb  Dockerfile  README.md  ab_testing_tutorial.ipynb  fly.toml  pyproject.toml  railway.toml  render.yaml  start.sh  test-docker.sh  test-local.sh
app/: __init__.py  api.py  main.py  randomise.py  utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: BucketVisualization.css  BucketVisualization.jsx  BulkSimulator.css  BulkSimulator.jsx  EditableValue.css  EditableValue.jsx  HilbertVisualization.css  HilbertVisualization.jsx  InputBar.css  InputBar.jsx  InputPanel.css  InputPanel.jsx  PipelineVisualizer.css  PipelineVisualizer.jsx  ResultCard.css  ResultCard.jsx  Tooltip.css  Tooltip.jsx
frontend/src/utils/: hilbert.js
