[tool.poetry]
name = "Randomise"
version = "0.1.0"
description = "A randomisation and pseudonymisation application"
authors = ["Jamie Martin jamie@colare.ai"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8.1"
mmh3 = "^4.0.0"
xxhash = "^3.4.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
randomisation = "app.main:main"